feat: Update WeatherGPT branding and add image generation
- Update the application's description in `metadata.json` to "Next Gen Weather AI".
- Introduce support for image generation by adding `imageRequest` and `imageResult` to the `Message` type in `types.ts`.
- Update CSS variables for accent gradients and insight backgrounds in `index.html` to reflect new visual themes.
- Refactor `weatherService.ts` to use a more structured "AGENTIC MCP NODE" system prompt for improved agent behavior.
- Integrate `ImageDisplay` component into `MessageItem.tsx` to render generated images.
- Modify `App.tsx` to handle image generation requests and display image results.

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
         --text-primary: #EAEAEB;
         --text-secondary: #A0A0A0;
         --border-color: rgba(255, 255, 255, 0.1);
-        --accent-gradient: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+        --accent-gradient: linear-gradient(to right, #818cf8 0%, #c084fc 50%, #f472b6 100%);
         --bg-alert-warning: rgba(239, 68, 68, 0.1); --border-alert-warning: rgba(239, 68, 68, 0.3); --text-alert-warning: #f87171;
         --bg-alert-advisory: rgba(249, 115, 22, 0.1); --border-alert-advisory: rgba(249, 115, 22, 0.3); --text-alert-advisory: #fb923c;
         --bg-alert-watch: rgba(234, 179, 8, 0.1); --border-alert-watch: rgba(234, 179, 8, 0.3); --text-alert-watch: #facc15;
         --bg-alert-statement: rgba(59, 130, 246, 0.1); --border-alert-statement: rgba(59, 130, 246, 0.3); --text-alert-statement: #60a5fa;
-        --bg-insight: rgba(234, 179, 8, 0.1); --border-insight: rgba(234, 179, 8, 0.3); --text-insight-icon: #facc15;
+        --bg-insight: rgba(14, 165, 233, 0.1); --border-insight: rgba(14, 165, 233, 0.3); --text-insight-icon: #38bdf8; /* Blue insights for water tips */
         --bg-skeleton: rgba(255, 255, 255, 0.1);
       }
       .theme-sky {
@@ -115,7 +115,7 @@
         --bg-alert-advisory: rgba(249, 115, 22, 0.1); --border-alert-advisory: rgba(249, 115, 22, 0.3); --text-alert-advisory: #f97316;
         --bg-alert-watch: rgba(234, 179, 8, 0.1); --border-alert-watch: rgba(234, 179, 8, 0.3); --text-alert-watch: #eab308;
         --bg-alert-statement: rgba(59, 130, 246, 0.1); --border-alert-statement: rgba(59, 130, 246, 0.3); --text-alert-statement: #3b82f6;
-        --bg-insight: rgba(234, 179, 8, 0.1); --border-insight: rgba(234, 179, 8, 0.3); --text-insight-icon: #ca8a04;
+        --bg-insight: rgba(14, 165, 233, 0.1); --border-insight: rgba(14, 165, 233, 0.3); --text-insight-icon: #0284c7;
         --bg-skeleton: rgba(0, 0, 0, 0.1);
       }
       body {
